# wichteln

./: .bandit  .copilot-instructions.md  .gitignore  .htmltest.yml  .pre-commit-config.yaml  CHANGELOG.md  CI_CD_SETUP_COMPLETE.md  CONTRIBUTING.md  COVERAGE_ANALYSIS.md  DOCUMENTATION_SETUP_SUMMARY.md  GEMINI.md  Makefile  README.md  Taskfile.yml  app.py  app_full.py  app_minimal.py  app_original.py  docs.bat  mail_service_demo.py  mkdocs.yml  pyproject.toml  test_duplicate_demo.py  test_duplicate_prevention.py
.github/workflows/: docs.yml
_includes/: commands.md
docs/: CHANGELOG.md  DEVELOPMENT_SETUP.md  DYNAMIC_CONTENT_EXTRACTION.md  GITHUB_PAGES_DEPLOYMENT.md  PYPROJECT_TOML_INTEGRATION.md  SIMPLIFIED_CONTENT_CONFIG.md  SINGLE_POINT_OF_TRUTH_STRATEGY.md  SINGLE_RESPONSIBILITY_TEST_ORGANIZATION.md  index.md
docs/_config/: content.py  content.yaml
docs/_includes/: commands.md  installation.md  project_summary.md
docs/guide/: configuration.md  deployment.md  quickstart.md
docs/reference/: routes.md  services.md  utils.md
routes/: __init__.py  assignment_routes.py  main_routes.py  participant_routes.py
scripts/: generate_docs.py  update_includes.py
services/: __init__.py  app_factory.py  debug_logger.py  email_service.py  email_templates.py  recaptcha_service.py  request_handler.py  token_manager.py  validators.py
src/mail_service/: MAIL_SERVICE_SUMMARY.md  __init__.py  factory.py  mailpit.py  protocol.py  smtp.py
src/wichteln/: __init__.py  forms.py  main.py
templates/: index.html  results.html
tests/: test_app.py  test_coverage_improvements.py  test_debug_logger.py  test_email_batch_processor.py  test_email_service.py  test_email_service_enhanced.py  test_email_service_integration.py  test_email_templates.py  test_enhanced_functionality.py  test_factory.py  test_final_coverage.py  test_forms.py  test_helpers.py  test_mail_service_comprehensive.py  test_mailpit.py  test_main.py  test_modular_routes.py  test_participant_routes.py  test_protocol.py  test_recaptcha_service.py  test_request_handler.py  test_services.py  test_single_responsibility.py  test_smtp.py  test_token_manager.py  test_validators.py  test_wichteln_init.py
