[project]
name = "wichteln"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask",
    "flask-mail>=0.10.0",
    "hatch",
]

[project.scripts]
wichteln = "wichteln.main:main"

[tool.hatch.build.targets.sdist]
packages = ["src/wichteln"]

[tool.hatch.build.targets.wheel]
packages = ["src/wichteln"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ruff>=0.12.3",
    "python-semantic-release",
    "pre-commit",
    "pytest>=8.4.1",
]

[tool.semantic_release]
branch = "main"
version_source = "tag"
commit_message = "chore(release): {version}"
tag_format = "v{version}"
