[project]
name = "wichteln"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "email-validator>=2.2.0",
    "flask",
    "flask-mail>=0.10.0",
    "hatch",
    "pydantic[email]>=2.11.7",
]

[project.scripts]
wichteln = "wichteln.main:main"

[tool.hatch.build.targets.sdist]
packages = ["src/wichteln"]

[tool.hatch.build.targets.wheel]
packages = ["src/wichteln"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ruff>=0.12.3",
    "python-semantic-release",
    "pre-commit",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.15",
    "mkdocstrings[python]>=0.29.1",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.2",
]

[tool.semantic_release]
branch = "main"
version_source = "tag"
commit_message = "chore(release): {version}"
tag_format = "v{version}"

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
